--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
   <body>
     <!--Navigation-->
     <nav class="top-navigation">
-      <div class="top-navigation-logo">🔌🔌Elinor Kramming</div>
+      <div class="top-navigation-logo">🔌Elinor Kramming</div>
       <div class="top-navigation-items">
         <a class="active" href="#home">Hem</a>
         <a href="aboutMe.html">Om mig</a>
