--- a/aboutMe.html
+++ b/aboutMe.html
@@ -9,14 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script defer src="script.js"></script>
-    <title>Elinors Portfolio Homepage</title>
+    <title>Elinors Portfolio om mig</title>
   </head>
 
   <body>
     <nav class="top-navigation">
       <div class="top-navigation-logo">🔌🔌Elinor Kramming</div>
       <div class="top-navigation-items">
-        <a href="#home">Hem</a>
+        <a href="index.html">Hem</a>
         <a class="active" href="aboutMe.html">Om mig</a>
         <a href="myWork.html">Arbete</a>
         <a href="contact.html">Kontakt</a>
@@ -24,6 +24,8 @@
     </nav>
     <main>
       <section>
+        <h1>Hej, Vad roligt att du vill läsa lite mer om mig!</h1>
+
         <article class="info-block">
           <figure>
             <img
@@ -33,23 +35,18 @@
             />
           </figure>
           <div class="info-block-text">
-            <h1>
-              Hej, Vad roligt att du vill läsa lite mer om mig!
-            </h1>
-
             <p>
               Jag har jobbat många år på en barnrättsorganisation och brinner
               för att göra skillnad i sammhället. Det är en härlig känsla att
-              kunna göra världen till en lite bättre plats genom ditt arbete.
+              kunna göra världen till en lite bättre plats genom sitt arbete.
               Jag har jobbat med mycket kundkontakt och är van att lyssna på vad
-              kunde/användarens behov. 
-              <p>
-                 Även om jag trivdes mycket bra på min
-              arbetsplats ville jag ta chansen att studera. Genom UX design kan
-              jag kombinera mina kunskaper med mina passioner. Att skapa och att
-              göra en bra sak för människor.
-              </p>
-             
+              kunde/användarens behov.
+            </p>
+            <p>
+              Även om jag trivdes mycket bra på min arbetsplats ville jag ta
+              chansen att studera. Genom UX design kan jag kombinera mina
+              kunskaper med mina passioner. Att skapa och att göra en bra sak
+              för människor.
             </p>
           </div>
         </article>
@@ -69,9 +66,9 @@
             <h3>Odla</h3>
 
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              Få saker är så givande som att gå ut och plocka sina egna
+              grönsaker för att sedan laga mat av dem. Dock lyckas inte alltid
+              min odling och i somras bjöds kolfjärillarna på kolbuffé.
             </p>
           </div>
         </article>
@@ -81,12 +78,10 @@
           <div class="info-block-text">
             <h3>Skapa i min trädgård</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
+              Genom att skapa i min trädgård får jag utöva min kreativitet och
+              vara ute samtidigt! Projekt jag ahr gjort genom åren är en
+              köksträdgård. Kallmurat en mur. Byggt "vattenfall" av sten" Byggt
+              fågelbad,verandor och ett växthus.
             </p>
           </div>
           <figure>
@@ -110,9 +105,8 @@
           <h3>Var i naturen</h3>
 
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris
+            Att få vistas i naturen ger mig alltid ro i själen. gärna en
+            promenad vid vattnet eller en tur i skogen.
           </p>
         </div>
       </article>
@@ -120,14 +114,11 @@
       <section>
         <article class="info-block info-block--one-column">
           <div class="info-block-text">
-            <h3>Skapa i min trädgård</h3>
+            <h3>Hänga med min hund</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
+              Tillsamman med min hund kan jag utöva många av de saker som får
+              oss att må bra. En joggingtur en regnig morgon eller ett härligt
+              dopp.
             </p>
           </div>
           <figure>
@@ -142,14 +133,11 @@
       <section>
         <article class="info-block info-block--one-column">
           <div class="info-block-text">
-            <h3>Skapa i min trädgård</h3>
+            <h3>Lyssna på musik</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
+              Musiken får mig alltid att må bra! Och visst är det underbart att
+              få gå på en konsert och uppleva musiken live tillsammans med andra
+              människor.
             </p>
           </div>
           <figure>
@@ -166,11 +154,120 @@
     <footer class="bottom-navigation">
       <div class="flex-container-footer">
         <!--<section class="bottom-navigation"></section>-->
-        <a href="index.html" class="bottom-navigation ">Hem</a>
+        <a href="index.html" class="bottom-navigation">Hem</a>
         <a href="aboutMe.html" class="bottom-navigation active">Om mig</a>
         <a href="myWork.html" class="bottom-navigation">Arbete</a>
         <a href="contact.html" class="bottom-navigation">Kontakt</a>
       </div>
     </footer>
+    <!--
+      Anna kod här nedan
+    -->
+
+    <h2>Mina passioner</h2>
+    <p>Skapande och naturen är genomgående i mina passioner.</p>
+    <div class="grid-container">
+      <div class="grid-items-passions">
+        <figure>
+          <img
+            class="info-block-image"
+            src="img/gardening-modified.png"
+            alt=""
+          />
+        </figure>
+        <div>
+          <h3>Odla1</h3>
+
+          <p>
+            Få saker är så givande som att gå ut och plocka sina egna grönsaker
+            för att sedan laga mat av dem. Dock lyckas inte alltid min odling
+            och i somras bjöds kolfjärillarna på kolbuffé.
+          </p>
+        </div>
+        <div class="grid-items-passions">
+          <figure>
+            <img
+              class="info-block-image"
+              src="img/Outside-wiev-modified.png"
+              alt=""
+            />
+          </figure>
+          <div>
+            <h3>Var i naturen3</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            </p>
+          </div>
+          <div class="grid-items-passions">
+            <figure>
+              <img
+                class="info-block-image"
+                src="/img/dog-wather-modified.png"
+                alt="Hund som badar på strand"
+              />
+            </figure>
+            <h3>Skapa i min trädgård4</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+              reprehenderit in voluptate velit esse cillum dolore eu fugiat
+              nulla pariatur
+            </p>
+          </div>
+          <div class="grid-items-passions">
+            <figure>
+              <img
+                class="info-block-image"
+                src="/img/dog-wather-modified.png"
+                alt="Hund som badar på strand"
+              />
+            </figure>
+            <h3>Lyssna på musik</h3>
+            <p>
+              Musiken får mig alltid att må bra! Och visst är det underbart att
+              få gå på en konsert och uppleva musiken live tillsammans med andra
+              människor.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="grid-items-passions">
+        <figure>
+          <img
+            class="info-block-image"
+            src="/img/garden-wather-modified.png"
+            alt=""
+          />
+        </figure>
+        <h3>Skapa i min trädgård2</h3>
+        <p>
+          Genom att skapa i min trädgård får jag utöva min kreativitet och vara
+          ute samtidigt! Projekt jag har gjort genom åren är en köksträdgård.
+          Kallmurat en mur. Byggt "vattenfall" av sten" Byggt fågelbad, verandor
+          och ett växthus.
+        </p>
+      </div>
+
+      <div class="grid-items-passions">
+        <figure>
+          <img
+            class="info-block-image"
+            src="/img/garden-wather-modified.png"
+            alt=""
+          />
+        </figure>
+        <h3>Skapa i min trädgård2</h3>
+        <p>
+          Genom att skapa i min trädgård får jag utöva min kreativitet och vara
+          ute samtidigt! Projekt jag har gjort genom åren är en köksträdgård.
+          Kallmurat en mur. Byggt "vattenfall" av sten" Byggt fågelbad, verandor
+          och ett växthus.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
