--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script defer src="script.js"></script>
-    <title>Elinors Portfolio Homepage</title>
+    <title>Elinors Portfolio Kontakt</title>
   </head>
 
   <body>
     <nav class="top-navigation">
       <div class="top-navigation-logo">🔌🔌Elinor Kramming</div>
       <div class="top-navigation-items">
-        <a  href="Index.html">Hem</a>
+        <a href="index.html">Hem</a>
         <a href="aboutMe.html">Om mig</a>
         <a href="myWork.html">Arbete</a>
         <a class="active" href="contact.html">Kontakt</a>
@@ -30,7 +30,7 @@
           <h2>Kära Elinor Kramming,</h2>
           <label for="text"></label>
           <textarea rows="10" cols="40" name="message" form="usrform">
-skriv ditt meddelande här....</textarea
+Skriv ditt meddelande här....</textarea
           >
         </div>
         <div class="field-first-name">
@@ -60,19 +60,21 @@ skriv ditt meddelande här....</textarea
       </form>
       <section>
         <h4>Eller genom :</h4>
-        <div class="container-socialmedia" >
-        <figure >
-          <a href="http:///www.linkedin.com/feed/"> <img src="img/linked-in (1).png" alt="Linked in logga" /></a>
-         
-        </figure>
-        <figure>
-          <img src="img/GitHub (1).png" alt="Git hub logga" />
-        </figure>
-        </figure>
-        <figure>
-          <a href="https://www.instagram.com/"><img src="img/Instagram.png" alt="Instagram" /></a>
-          
-        </figure>
+        <div class="container-socialmedia">
+          <figure>
+            <a href="http://www.linkedin.com/feed/">
+              <img src="img/linked-in.png" alt="Linked in logga"
+            /></a>
+          </figure>
+          <figure>
+            <img src="img/GitHub.png" alt="Git hub logga" />
+          </figure>
+
+          <figure>
+            <a href="https://www.instagram.com/"
+              ><img src="img/Instagram.png" alt="Instagram"
+            /></a>
+          </figure>
         </div>
       </section>
     </main>
@@ -80,9 +82,9 @@ skriv ditt meddelande här....</textarea
     <footer class="bottom-navigation">
       <div class="flex-container-footer">
         <!--<section class="bottom-navigation"></section>-->
-        <a href="index.html" class="bottom-navigation ">Hem</a>
+        <a href="index.html" class="bottom-navigation">Hem</a>
         <a href="aboutMe.html" class="bottom-navigation">Om mig</a>
-        <a  href="myWork.html" class="bottom-navigation active">Arbete</a>
+        <a href="myWork.html" class="bottom-navigation active">Arbete</a>
         <a href="contact.html" class="bottom-navigation">Kontakt</a>
       </div>
     </footer>
