--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script defer src="script.js"></script>
-    <title>Elinors Portfolio Homepage</title>
+    <title>Elinors Portfolio hem</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
     <nav class="top-navigation">
       <div class="top-navigation-logo">Elinor Kramming!!</div>
       <div class="top-navigation-items">
-        <a class="active" href="#home">Hem</a>
+        <a class="active">Hem</a>
         <a href="aboutMe.html">Om mig</a>
         <a href="myWork.html">Arbete</a>
         <a href="contact.html">Kontakt</a>
@@ -30,42 +30,41 @@
           <figure>
             <img
               class="info-block-image"
-              src="/img/Profil-picture.jpg"
+              src="img/Profil-picture.jpg"
               alt="Elinor Kramming"
             />
           </figure>
-          <div class="info-block-text">
-            <h1>
-              Hej, Jag heter Elinor Krammming och studerar Ux Design med
-              kravkompetens.
-            </h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
-            </p>
+          <div>
+            <div class="info-block-text">
+              <h1>Hej! Jag heter Elinor Krammming</h1>
+              <h3>Jag studerar Ux Design med kravkompetens.</h3>
+
+              <p>
+                Efter många år av arbete innom en barnrättsorganisation ville
+                jag ta möjligheten att studera. Jag ville fortsätta att jobba
+                med kundkontakt och kundresor som jag jobbat med. Ux Designer
+                lockade mig mycket, då jag även tycker om att jobba för en god
+                sak och bra och inkluderande webbplatser ser jag som något
+                vikigt.
+              </p>
+              <p>
+                Jag ser mig själv som en kreativ problemlösare som är bra på att
+                lyssna på vad människor behöver.
+              </p>
+              <div style="padding-top: 20px; padding-bottom: 20px">
+                <span class="tag">UX</span>
+                <span class="tag">Krav</span>
+                <span class="tag">Design</span>
+                <span class="tag">HTML</span>
+              </div>
+            </div>
           </div>
         </article>
       </section>
       <!--Section about my work examples-->
       <section>
         <h2>Mitt Arbete</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris
-        </p>
+        <p class="no-margin--top">Här följer några arbeten som jag gjort.</p>
         <article class="info-block info-block--one-column">
           <figure>
             <img
@@ -75,15 +74,12 @@
             />
           </figure>
           <div class="info-block-text">
-            <h3>Exempel 1</h3>
-
+            <h3>Redesign av Chas Academys webbplats</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
+              Chas Academy behövde uppdatera sin webbplats och som en del av
+              utbildningen kunde vi då välja att titta närmare på den. Det känns
+              bra att få arbeta med ett projekt där våra ideér kan bli
+              verklighet.
             </p>
           </div>
         </article>
@@ -91,82 +87,28 @@
       <section>
         <article class="info-block info-block--one-column">
           <div class="info-block-text">
-            <h3>Exempel 2</h3>
+            <h3>Agera kravställare till lansering av matapp/Foodora</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
+              Tillsammans med min grupp ska vi skapa krav för en tilltänkt
+              matapp. Vi håller en workshop med kunden för att komma fram till
+              vad de är ute efter. Vi börjar med en lätt icebreaker för att få
+              igång ideer och känna oss tryggare i gruppen. Kunden får sedan
+              brainstorma kring frågan "När du ska beställa mat vad är viktigt
+              för dig då?" Först enskilt sedan i grupp. Nästa fråga blir Om fem
+              år, hur skulle Foodora se ut då? Innan vi avslutar workshopen så
+              får alla rösta med hjälp av tre prickar på de förslagen de tycker
+              är viktigast.
             </p>
           </div>
           <figure>
             <img
               class="info-block-image"
-              src="/img/behovskarta Foodora Small.png"
-              alt=""
+              src="img/behovskarta-Foodora-Small.png"
+              alt="Behovskarta matapp"
             />
           </figure>
         </article>
       </section>
-
-      <!--
-      <section class="flex-container">
-        <img src="img/IschnuraElegansHead.jpeg" alt="Elinor Kramming" />
-
-        <section>
-          <h1>Hej, jag heter Elinor och pluggar UX desig och kravhantering</h1>
-          <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-            and scrambled it to make a type specimen book. It has survived not
-            only five centuries, but also the leap into electronic typesetting,
-            remaining essentially unchanged. It was popularised in the 1960s
-            with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus
-            PageMaker including versions of Lorem Ipsum
-          </p>
-        </section>
-      </section>
-      <section>
-        <h2>Exempel 1</h2>
-        <p>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum
-        </p>
-      </section>
-      <section>
-        <p>
-          <h2>Exempel 2</h2>
-          Lorem Ipsum is simply dummy text of the printing and typesetting
-          industry. Lorem Ipsum has been the industry's standard dummy text ever
-          since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. It has survived not only
-          five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with
-          the release of Letraset sheets containing Lorem Ipsum passages, and
-          more recently with desktop publishing software like Aldus PageMaker
-          including versions of Lorem Ipsum
-        </p>
-      </section>
-      <div class="information-about">
-        <div class="test1">
-          <img src="img/IschnuraElegansHead.jpeg" alt="Elinor Kramming" />
-        </div>
-        <h1 class="main-h1">
-          Hej, jag heter Elinor och pluggar UX desig och kravhantering
-        </h1>
-        <div>Text om mig här</div>
-      </div>-->
     </main>
     <!--footer-->
     <footer class="bottom-navigation">
