--- a/myWork.html
+++ b/myWork.html
@@ -9,99 +9,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <script defer src="script.js"></script>
-    <title>Elinors Portfolio Homepage</title>
+    <title>Elinors Portfolio mitt arbete</title>
   </head>
 
   <body>
+    <!--Navigation-->
     <nav class="top-navigation">
       <div class="top-navigation-logo">🔌🔌Elinor Kramming</div>
       <div class="top-navigation-items">
-        <a href="#home">Hem</a>
+        <a href="index.html">Hem</a>
         <a href="aboutMe.html">Om mig</a>
         <a class="active" href="myWork.html">Arbete</a>
         <a href="contact.html">Kontakt</a>
       </div>
     </nav>
+    <!--maincontent-->
     <main>
-      <section>
-        <article class="info-block">
-          <figure>
-            <img
-              class="info-block-image"
-              src="/img/Profil-picture.jpg"
-              alt="Elinor Kramming"
-            />
-          </figure>
-          <div class="info-block-text">
-            <h1>
-              Hej, Jag heter Elinor Krammming och studerar Ux Design med
-              kravkompetens.
-            </h1>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
-            </p>
+      <h1>Mitt Arbete</h1>
+      <p>Ta gärna en titt på arbetet jag har gjort.</p>
+      <article>
+        <div>
+          <div class="info-block">
+            <figure>
+              <img
+                class="info-block-image"
+                src="img/Chas-Prototyp-Small.png"
+                alt="Chas academy prototyp"
+              />
+            </figure>
+            <div class="info-block-text">
+              <h2>Redesign av Chas Academys webbplats</h2>
+              <p>
+                Chas Academy behövde uppdatera sin webbplats och som en del av
+                utbildningen kunde vi då välja att titta närmare på den. Det
+                känns bra att få arbeta med ett projekt där våra ideér kan bli
+                verklighet.
+              </p>
+              <p>
+                Uppgiften var en gruppuppgift och vi började med prata med
+                kunden och undersöka vilken målgrupp de har och vad har för
+                målsättning med den nya webbplatsen. Vi skapade sedan tre
+                personas efter kundens input.Vi förstsatte med att göra en
+                konkurentanalys samt att skicka ut en enkät, både till personer
+                som kunde tänka sig att börja studera med också till de som
+                redan är studenter på skolan.
+              </p>
+            </div>
+            <div></div>
           </div>
-        </article>
-      </section>
-      <section>
-        <h2>Mitt Arbete</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris
-        </p>
-        <article class="info-block info-block--one-column">
+        </div>
+
+        <div class="container-img">
           <figure>
             <img
               class="info-block-image"
-              src="img/Chas-Prototyp-Small.png"
-              alt="Chas academy prototyp"
+              src="img/Form-small.png"
+              alt="enkät"
             />
           </figure>
+          <figure>
+            <img
+              class="info-block-image"
+              src="img/LoFi_Chas.png"
+              alt="LoFi skiss över Chas academys nya webbsida"
+            />
+          </figure>
+          <div>
+            <figure>
+              <img
+                class="info-block-image"
+                src="img/affinity.png"
+                alt="Affinitydiagram"
+              />
+            </figure>
+            <figure>
+              <img
+                class="info-block-image"
+                src="img/Persona.png"
+                alt="Persona från Chas Academy"
+              />
+            </figure>
+          </div>
+        </div>
+      </article>
+
+      <section>
+        <article class="info-block info-block--one-column">
           <div class="info-block-text">
-            <h3>Exempel 1</h3>
+            <h2>Agera kravställare till lansering av matapp/Foodora</h2>
+            <p>
+              Tillsammans med min grupp ska vi skapa krav för en tilltänkt
+              matapp. Vi håller en workshop med kunden för att komma fram till
+              vad de är ute efter. Vi börjar med en lätt icebreaker för att få
+              igång ideer och känna oss tryggare i gruppen. Kunden får sedan
+              brainstorma kring frågan "När du ska beställa mat vad är viktigt
+              för dig då?" Först enskilt sedan i grupp. Nästa fråga blir Om fem
+              år, hur skulle Foodora se ut då? Innan vi avslutar workshopen så
+              får alla rösta med hjälp av tre prickar på de förslagen de tycker
+              är viktigast.
+            </p>
 
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
-            </p>
-          </div>
-        </article>
-      </section>
-      <section>
-        <article class="info-block info-block--one-column">
-          <div class="info-block-text">
-            <h3>Exempel 2</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
+              Gruppen använder Jira för att hantera kraven vi fått fram. Både
+              funktionella och icke-funktionella krav. Vi jobbar med att göra
+              kraven enligt INVEST. Tillsammans med kunden så prioriteras kraven
+              och godkänns. Gruppen gör också ett par Use cases för att
+              visualisera kraven tydligt.
             </p>
           </div>
           <figure>
             <img
               class="info-block-image"
-              src="/img/behovskarta Foodora Small.png"
+              src="img/behovskarta-Foodora-Small.png"
               alt="Behovskarta Foodora"
             />
           </figure>
@@ -112,46 +131,38 @@
           <figure>
             <img
               class="info-block-image"
-              src="img/Chas-Prototyp-Small.png"
+              src="img/Flowshart.png"
               alt="Chas Academy prototyp"
             />
           </figure>
           <div class="info-block-text">
-            <h3>Exempel 3</h3>
+            <h3>Flödeschema Restaurang</h3>
 
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
-            </p>
+            <p>Köpflöde i en smabbmatskedja.</p>
           </div>
         </article>
       </section>
       <section>
         <article class="info-block info-block--one-column">
           <div class="info-block-text">
-            <h3>Exempel 4</h3>
+            <h3>App försäljning av vattenflaskor</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-              reprehenderit in voluptate velit esse cillum dolore eu fugiat
-              nulla pariatur
+              En enkel app som säljer vattenflaskor, här ville jag skapa en
+              känsla av vatten, enkelhel och fräschet.Färgerna går i grönt som
+              är en lugn färg då shoppen även har ett miljötänk. Köpflödet ska
+              vara enkelt och tydligt.
             </p>
           </div>
           <figure>
             <img
               class="info-block-image"
-              src="/img/behovskarta Foodora Small.png"
-              alt="Behovskarta Foodora"
+              src="img/HiFi_Bottle_Proj.png"
+              alt="App för vattenflaskor"
             />
           </figure>
         </article>
       </section>
+      <section></section>
 
       <!--
       <section class="flex-container">
